- Fixed toggle password visibility with Turbo compatibility (25/05/2026)

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -157,7 +157,7 @@ input[type="text"]:focus {
 .has-toggle .toggle-password {
     position: absolute;
     right: 10px;
-    top: 40px;
+    top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
     z-index: 2;
